--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
 body{
     width: 100%;
     min-height: 100vh;
-    /*background-image: linear-gradient(rgba(0,0,0,.5),(rgba(0,0,0,.5)), url('/img/bg/logo.png');*/
+    background-image: linear-gradient(red, yellow, blue, green);
+    /*background-image: url("/logo.png");*/
     background-position: center;
     background-size: cover;
     display: flex;
